fix(overlay): horizontal content overflow in runtime error container

--- a/packages/dev-overlay/src/components/RuntimeError.scss
+++ b/packages/dev-overlay/src/components/RuntimeError.scss
@@ -17,7 +17,7 @@
 
         > .error-message {
             padding: 0.5em 0;
-            white-space: pre;
+            white-space: pre-wrap;
         }
     }
 
