--- a/packages/dev-overlay/src/containers/CompileWarningContainer.scss
+++ b/packages/dev-overlay/src/containers/CompileWarningContainer.scss
@@ -4,6 +4,7 @@
     @include flex(column);
     overflow: auto;
     min-width: 50%;
+    max-width: 100%;
     position: relative;
 
     > header {
