--- a/packages/dev-overlay/src/containers/RuntimeErrorContainer.scss
+++ b/packages/dev-overlay/src/containers/RuntimeErrorContainer.scss
@@ -3,6 +3,7 @@
 .runtime-errors {
     @include flex(column);
     min-width: 50%;
+    max-width: 100%;
     height: 100%;
     position: relative;
     border-radius: 0.25em;
